workaround for z-index bug on timetables

--- a/css/clubwoodham/template.css
+++ b/css/clubwoodham/template.css
@@ -483,6 +483,7 @@ ul.subnav li a{
     color: #669;
     border-top: 1px solid transparent;
     position:relative;
+ 
 }
 #box-table-a tr:hover td
 {
@@ -540,13 +541,15 @@ ul.subnav li a{
     width:16px;
     height:16px;
 
+
 }
 .infobox
 {
     position:absolute;
     width:300px;
     padding:10px;
-    z-index:2000;
+    left:30px;
+    z-index:20000;
     display: none;
     margin:0px;
     background-color: black;
